# Vulkan-Engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
assets/: cubearmy.glb  livingroom.json  multitextured.glb  parentingcubes.blend  parentingcubes.blend1  parentingcubes.glb  parentingcubes2.glb  rotatedcube.blend  rotatedcube.glb  rotatedcubescl.glb
shaders/: default_lit.frag.spv  funky_triangle.frag.spv  input_structures.glsl  mc_accum.comp  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  raycommon.glsl  raytrace.rchit  raytrace.rchit.spv  raytrace.rgen  raytrace.rgen.spv  raytrace.rmiss  raytrace.rmiss.spv  sky.comp.spv  temporal_resolve.comp  textured_lit.frag.spv  tri_mesh.vert.spv  tri_mesh_descriptors.vert.spv  tri_mesh_pushconstants.vert.spv  tri_mesh_ssbo.vert.spv  triangle.frag.spv  triangle.vert.spv
src/: CMakeLists.txt  camera.cpp  camera.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_loader.cpp  vk_loader.h  vk_raytracer.cpp  vk_raytracer.h  vk_types.h
